// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InfoBoxFeature Should not render if tag slugs do not match tagList and no valid path 1`] = `<div />`;

exports[`InfoBoxFeature Should override the link if tagList matches tag slug and link is present 1`] = `
<div>
  <article
    class="ln-zocalo p-16 p-24_m pb-0_m border border-all border-1 border-neutral-light-100 mb-32"
  >
    <a
      class="link"
      href="https://custom-link.com"
      rel="nofollow"
      target="_blank"
      title="IR A LA GUÍA"
    >
      <div
        class="flex flex-row_m flex-column ai-center ai-stretch_m gap-24"
      >
        <div
          class="mb-0_m flex-shrink-0"
        >
          <picture>
            <source
              media="(min-width: 768px)"
              srcset=""
            />
            <img
              alt="Imagen de asistencia contra suicidio"
              class="image w-100 none --cover"
              decoding="async"
              fetchpriority="low"
              loading="lazy"
              style="display: none;"
            />
          </picture>
        </div>
        <div
          class="flex flex-column gap-24 ai-start_m ai-center jc-center flex-shrink-1"
        >
          <div
            class="flex gap-16 flex-wrap jc-start_m jc-center"
          >
            <img
              alt="Logo de asistencia contra suicidio"
              class="image none --cover"
              decoding="async"
              fetchpriority="low"
              loading="lazy"
              style="display: none;"
              width="150"
            />
            <p
              class="text prumo --prumo-italic prumo-slab text-28 font-bold text-neutral-light-800 uppercase text-center text-start_m w-160_max512 w-width_min512"
            >
              <mark>
                suicidio
              </mark>
            </p>
            <p
              class="text prumo prumo-slab prumo-medium text-18 text-center text-initial_m text-neutral-light-800"
            >
              Entrá a la guía de Fundación La Nación y encontrá los tips de los expertos sobre cómo prevenir, actuar y encontrar ayuda frente a este problema
            </p>
          </div>
          <div
            class="py-12 px-16 rounded-4 --font-2xs --font-bold bg-blue-500 text-light-0 uppercase transition transition-all transition-duration-800 mb-24_m"
          >
            IR A LA GUÍA
          </div>
        </div>
      </div>
    </a>
  </article>
</div>
`;

exports[`InfoBoxFeature Should render if any tag slug matches tagList 1`] = `
<div>
  <article
    class="ln-zocalo p-16 p-24_m pb-0_m border border-all border-1 border-neutral-light-100 mb-32"
  >
    <a
      class="link"
      href="https://www.lanacion.com.ar/comunidad/hablemos-de-todo/hablemos-de-todo-nid09052025/"
      rel="nofollow"
      target="_blank"
      title="IR A LA GUÍA"
    >
      <div
        class="flex flex-row_m flex-column ai-center ai-stretch_m gap-24"
      >
        <div
          class="mb-0_m flex-shrink-0"
        >
          <picture>
            <source
              media="(min-width: 768px)"
              srcset=""
            />
            <img
              alt="Imagen de asistencia contra violencia de género"
              class="image w-100 none --cover"
              decoding="async"
              fetchpriority="low"
              loading="lazy"
              style="display: none;"
            />
          </picture>
        </div>
        <div
          class="flex flex-column gap-24 ai-start_m ai-center jc-center flex-shrink-1"
        >
          <div
            class="flex gap-16 flex-wrap jc-start_m jc-center"
          >
            <img
              alt="Logo de asistencia contra violencia de género"
              class="image none --cover"
              decoding="async"
              fetchpriority="low"
              loading="lazy"
              style="display: none;"
              width="150"
            />
            <p
              class="text prumo --prumo-italic prumo-slab text-28 font-bold text-neutral-light-800 uppercase text-center text-start_m w-160_max512 w-width_min512"
            >
              <mark>
                Violencia de género
              </mark>
            </p>
            <p
              class="text prumo prumo-slab prumo-medium text-18 text-center text-initial_m text-neutral-light-800"
            >
              Entrá a la guía de servicio y encontrá los tips de los expertos sobre cómo prevenir, actuar y encontrar ayuda frente a este problema.
            </p>
          </div>
          <div
            class="py-12 px-16 rounded-4 --font-2xs --font-bold bg-blue-500 text-light-0 uppercase transition transition-all transition-duration-800 mb-24_m"
          >
            IR A LA GUÍA
          </div>
        </div>
      </div>
    </a>
  </article>
</div>
`;

exports[`InfoBoxFeature Should render if primary_section path has /deportes 1`] = `
<div>
  <article
    class="ln-zocalo p-16 p-24_m pb-0_m border border-all border-1 border-neutral-light-100 mb-32"
  >
    <a
      class="link"
      href="https://canchallena.lanacion.com.ar/"
      rel="nofollow"
      target="_blank"
      title="Ir a Canchallena"
    >
      <div
        class="flex flex-row_m flex-column ai-center ai-stretch_m gap-24"
      >
        <div
          class="mb-0_m flex-shrink-0"
        >
          <picture>
            <source
              media="(min-width: 768px)"
              srcset=""
            />
            <img
              alt="Imagen de celular con la app de Canchallena"
              class="image w-100 none --cover"
              decoding="async"
              fetchpriority="low"
              loading="lazy"
              style="display: none;"
            />
          </picture>
        </div>
        <div
          class="flex flex-column gap-24 ai-start_m ai-center jc-center flex-shrink-1"
        >
          <div
            class="flex gap-16 flex-wrap jc-start_m jc-center"
          >
            <img
              alt="Logo de Canchallena"
              class="image none --cover"
              decoding="async"
              fetchpriority="low"
              loading="lazy"
              style="display: none;"
            />
            <p
              class="text --font-primary --font-medium --font-m text-center text-initial_m text-neutral-light-800"
            >
              Encontrá resultados de fútbol en vivo, los próximos partidos, las tablas de posiciones, y todas las estadísticas de los principales torneos del mundo.
            </p>
          </div>
          <div
            class="py-12 px-16 rounded-4 --font-2xs --font-bold bg-blue-500 text-light-0 uppercase transition transition-all transition-duration-800"
          >
            Ir a Canchallena
          </div>
        </div>
      </div>
    </a>
  </article>
</div>
`;
